--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   "homepage": "https://github.com/Maze-Software/poll-server#readme",
   "dependencies": {
     "axios": "^0.21.0",
+    "base-64": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "iyzipay": "^2.0.48",
+    "js-crypto-hmac": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.11",
     "multer": "^1.4.2",
