--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "iyzipay": "^2.0.48",
     "js-crypto-hmac": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "mongoose": "^5.10.11",
     "multer": "^1.4.2",
     "node-mailjet": "^3.3.1",
     "nodemailer": "^6.4.16",
     "socket.io": "^4.0.0",
-    "validator": "^13.1.17"
+    "validator": "^13.1.17",
+    "xml2json": "^0.12.0"
   }
 }
